Use jpackage launchers for Linux packaging